# humanet3-repo

./: eu_ai_act_refs.csv
h3-repo/: 32016R0679_children.json  32019R1020_children.json  52021AR2682_children.json  pyproject.toml
h3-repo/h3_repo/: build_graph.py  compare_txt_md.py  create_graph_page.py  draw_graph.ipynb  draw_graph.py  explore_csv.ipynb  file_to_table.py  main.py  merged_1st_ref.csv  merged_unique_refs.csv  meta_documents.csv  pdf_to_txt.py  start_search.py  url_utils.py
h3-repo/h3_repo/celex_html_data/: 32022R2065.html  32024R1689.html
h3-repo/h3_repo/children_data/: 32005L0029_errors.json  32006L0042_errors.json  32008L0048_errors.json  32008R0300_errors.json  32008R0765_errors.json  32009L0138_errors.json  32009R0810_errors.json  32010L0013_errors.json  32011L0083_errors.json  32012R1025_errors.json  32012R1215_errors.json  32013L0032_errors.json  32013R1024_errors.json  32014R0910_errors.json  32016L0680_errors.json  32016R0794_errors.json  32017R0745_errors.json  32017R0746_errors.json  32017R2394_errors.json  32018L1972_errors.json  32018R0858_errors.json  32018R1046_errors.json  32018R1725_errors.json  32019R0881_errors.json  32021R0784_errors.json  32022L2557_errors.json  32024R1689.json  52022XC0629(04)_errors.json
h3-repo/h3_repo/documents/: CETS_225_EN.docx.pdf.json  CETS_225_EN.docx.pdf.txt  CETS_225_Rapex_EN.docx.pdf.json  CETS_225_Rapex_EN.docx.pdf.txt  Decl(13_02_2019)1E.pdf.json  Decl(13_02_2019)1E.pdf.txt
h3-repo/h3_repo/eu_ai_act/: L_202401689EN.000101.fmx.xml.html  OJ:L_202401689:EN:TXT.pdf.json  build_graph.py  extract_url.py  (+1 more)
(+301 files in other folders)
