[tool.poetry]
name = "h3-repo"
version = "0.1.0"
description = ""
authors = ["Yun <yun@mpib-berlin.mpg.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pypdf2 = "^3.0.1"
pandas = "^2.2.3"
bs4 = "^0.0.2"
requests = "^2.32.3"
networkx = "^3.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
